--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <title>VisitePlanner — PezzaliAPP</title>
   <link rel="manifest" href="manifest.json">
   <meta name="theme-color" content="#0f172a">
+  <link rel="icon" type="image/x-icon" href="icons/favicon.ico">
   <style>
     :root{--bg:#0f172a;--card:#111827;--ink:#e5e7eb;--muted:#9ca3af;--accent:#22c55e;--line:#1f2937}
     *{box-sizing:border-box}
